--- a/src/components/mainSection/mainSection.css
+++ b/src/components/mainSection/mainSection.css
@@ -16,7 +16,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  z-index: 2;
 }
 
 .hero-left-content {
@@ -168,6 +167,85 @@
   .buttonMainSection {
     margin: 20px auto;
     width: 220px;
+    height: 60px;
+    background: #f25f46;
+    border-radius: 20px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    box-shadow: 0px 26px 46px -24px rgba(241, 139, 98, 0.7696) !important;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 990px) {
+  .headingMainSection {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.5rem;
+    line-height: 60px;
+
+    letter-spacing: -1px;
+
+    color: #213053;
+
+    text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .hero-container {
+    padding: 10px 0;
+    padding-bottom: 10px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    background-repeat: none;
+    background-size: cover;
+  }
+
+  .hero-wrapper {
+    max-width: 90%;
+    margin: 4em auto;
+    padding-bottom: 4em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 2;
+  }
+
+  .paragraphMainSection {
+    /* font-weight: 300; */
+    font-size: 0.8rem;
+    line-height: 20px;
+    margin-top: 25px;
+    margin-bottom: 5px;
+    color: #213053;
+  }
+
+  .hero-left-content {
+    width: 60%;
+  }
+
+  .hero-right-content {
+    width: 40%;
+  }
+
+  .background-esr h2 {
+    font-weight: 900;
+    font-size: 6.5rem;
+    position: absolute;
+    left: -25px;
+    color: #213053;
+    opacity: 0.15;
+    bottom: -30px;
+  }
+
+  .buttonMainSection {
+    margin: 20px auto;
+    width: 200px;
     height: 60px;
     background: #f25f46;
     border-radius: 20px;
