--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -143,6 +143,20 @@
   }
 }
 
+@media (min-width: 600px) and (max-width: 990px) {
+  .footer-btn-wrapper:before,
+  .footer-btn-wrapper:after {
+    content: "";
+    width: 300px;
+    height: 1px;
+    margin: 0 10px;
+    vertical-align: super;
+    background: #ffffff;
+    opacity: 0.2;
+    display: inline-block;
+  }
+}
+
 @media (min-width: 1920px) {
   .footer-whole-container {
     max-width: 1300px;
@@ -151,7 +165,7 @@
   .footer-btn-wrapper:before,
   .footer-btn-wrapper:after {
     content: "";
-    width: 550px;
+    width: 520px;
     height: 1px;
     margin: 0 10px;
     vertical-align: super;
