--- a/src/components/portFolio/portFolio.css
+++ b/src/components/portFolio/portFolio.css
@@ -109,6 +109,7 @@
 .portfolio {
   width: 400px;
   height: 400px;
+  margin: 1em 0;
 }
 
 .portfolio-img {
@@ -191,7 +192,7 @@
   border-radius: 50%;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
   .portfolio-container {
     display: flex;
     align-items: center;
@@ -397,5 +398,58 @@
     height: 100%;
     object-fit: cover;
     border-radius: 50%;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 960px) {
+  .portfolio {
+    width: 320px;
+  }
+
+  .portfolio-container {
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .portfolio-img {
+    width: 100%;
+    padding: 40px 10px;
+    padding-left: 15px;
+    padding-bottom: 0px;
+    display: flex;
+  }
+
+  .portfolio-green {
+    padding-right: 0;
+  }
+
+  .portfolio-img img {
+    width: 100%;
+  }
+}
+
+/* @media (min-width: 960px) and (max-width: 1200px) {
+} */
+
+@media (min-width: 991px) and (max-width: 1263px) {
+  .portfolio {
+    width: 340px;
+  }
+
+  .portfolio-img {
+    width: 100%;
+    padding: 25px 15px;
+    padding-bottom: 0;
+  }
+
+  .portfolio-green {
+    padding-right: 0;
+  }
+
+  .portfolio-img img {
+    width: 100%;
+    object-fit: cover;
   }
 }
