--- a/src/components/testimonialSlider/testimonialSlider.css
+++ b/src/components/testimonialSlider/testimonialSlider.css
@@ -1,7 +1,7 @@
 .testimonial-section {
   max-width: 100%;
-  /* height: 500px; */
-  /* margin: 100px auto 0; */
+  height: inherit;
+  margin: 100px auto 0;
   position: relative;
   padding: 20px 0;
   overflow: hidden;
@@ -35,25 +35,10 @@
   justify-content: space-between;
 }
 
-.slide-userInfo {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  width: 55%;
-  position: relative;
-}
-
-.slide-userImg {
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  width: 35%;
-  height: 320px;
-}
-
 .slide-userImg img {
   width: 100%;
-  object-fit: cover;
+  height: auto;
+  object-fit: contain;
 }
 
 .slide-userInfo-testimony {
@@ -61,27 +46,20 @@
   line-height: 36px;
   letter-spacing: 1px;
   text-align: justify;
+  position: relative;
 }
 
 .slide-userInfo-testimony::before {
   content: "\201C";
-  top: 20px;
-  left: -50px;
-  font-size: 180px;
+  left: -45px;
+  top: 18px;
+  font-size: 10rem;
   font-weight: bolder;
   position: absolute;
   display: inline-block;
   color: #2ec5ce;
   font-family: "Times New Roman", Times, serif;
   opacity: 0.5;
-}
-
-.active-anim {
-  opacity: 1;
-  display: flex;
-  /* align-items: center; */
-  flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .btn-slide {
@@ -143,22 +121,309 @@
   margin: 0;
 }
 
-@media screen and (max-width: 700px) {
+.active-anim {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.slide-userImg {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 200px;
+  margin-top: 5em;
+}
+
+@media (min-width: 768px) {
+  .testimonial-section {
+    max-width: 100%;
+    height: 500px;
+    margin: 100px auto 0;
+    position: relative;
+    padding: 20px 0;
+    overflow: hidden;
+    background: #d5fafc;
+  }
   .active-anim {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    opacity: 1;
+    display: flex;
+    /* align-items: center; */
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
-  .active-anim > * {
-    width: 100%;
-    align-items: center;
+  .slide-userInfo {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 55%;
+    position: relative;
+  }
+
+  .slide-userImg {
     justify-content: center;
-    margin: 50px auto;
+    align-items: center;
+    display: flex;
+    width: 35%;
+    height: 320px;
+  }
+
+  .slide-userInfo-testimony::before {
+    content: "\201C";
+    top: 20px;
+    left: -50px;
+    font-size: 180px;
+    font-weight: bolder;
+    position: absolute;
+    display: inline-block;
+    color: #2ec5ce;
+    font-family: "Times New Roman", Times, serif;
+    opacity: 0.5;
+  }
+
+  .slide-userImg img {
+    width: 100%;
+    object-fit: cover;
   }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 768px) and (max-width: 960px) {
+  .testimonial-section {
+    height: inherit;
+  }
+  .slider-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .slide {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin: 0 auto;
+    opacity: 0;
+    transition: opacity ease-in-out 0.4s;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .slide-userInfo {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 55%;
+    position: relative;
+  }
+
+  .slide-userImg {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 35%;
+    margin-top: 0;
+  }
+
+  .slide-userImg img {
+    width: 100%;
+    /* height: 100%; */
+    object-fit: cover;
+  }
+
+  .slide-userInfo-testimony {
+    font-size: 1rem;
+    line-height: 25px;
+    letter-spacing: 1px;
+    text-align: justify;
+  }
+
+  .slide-userInfo-testimony::before {
+    content: "\201C";
+    top: 20px;
+    left: -40px;
+    font-size: 8.8rem;
+    font-weight: bolder;
+    position: absolute;
+    display: inline-block;
+    color: #2ec5ce;
+    font-family: "Times New Roman", Times, serif;
+    opacity: 0.5;
+  }
+
+  .active-anim {
+    opacity: 1;
+    display: flex;
+    /* align-items: center; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .btn-slide {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #f1f1f1;
+    border: 1px solid rgba(34, 34, 34, 0.287);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .btn-slide img {
+    width: 25px;
+    height: 25px;
+    pointer-events: none;
+  }
+
+  .container-dots {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    margin-bottom: 30px;
+  }
+  .dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 3px solid #f1f1f1;
+    margin: 0 5px;
+    background: #f1f1f1;
+    cursor: pointer;
+    border: none;
+    outline: none;
+  }
+
+  .dot.active {
+    background: #2ec5ce;
+  }
+
+  .slide-userInfo-userName {
+    color: #2ec5ce;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 10px 0;
+    margin-top: 30px;
+  }
+
+  .slide-userInfo-userPosition {
+    font-size: 16px;
+    font-weight: 500;
+    color: #213053;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media (min-width: 960px) and (max-width: 1200px) {
+  .testimonial-section {
+    height: 500px;
+  }
+
+  .slider-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .active-anim {
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  .slide-userInfo {
+    width: 55%;
+  }
+
+  .slide-userImg {
+    width: 40%;
+    display: flex;
+    margin-top: 0;
+  }
+
+  .slide-userInfo img {
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
+@media (min-width: 960px) and (max-width: 1200px) {
+  .slider-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .slide-userInfo {
+    width: 55%;
+  }
+  .slide-userInfo-testimony {
+    line-height: normal;
+  }
+  .slide-userInfo-testimony::before {
+    content: "\201C";
+    top: -70px;
+    font-size: 180px;
+    position: absolute;
+  }
+  .slide-userImg {
+    margin-top: 0px;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1600px) {
+  .testimonial-section {
+    height: auto;
+  }
+
+  .active-anim {
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  .slider-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  /* .slide-userImg {
+    margin-top: 0px;
+  } */
+}
+
+@media (min-width: 1600px) and (max-width: 1900px) {
+  .testimonial-section {
+    height: auto;
+  }
+  .active-anim {
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+  .slide-userImg {
+    margin-top: 0px;
+  }
+}
+
+@media (min-width: 1900px) {
+  .testimonial-section {
+    height: 500px;
+  }
+  .active-anim {
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+  .slide-userImg {
+    margin-top: 0px;
+  }
+}
+
+@media (min-width: 1930px) {
   .slider-container {
     width: 1300px;
     margin: 0 auto;
