--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Castoro&family=EB+Garamond:wght@400;500;600;700;800&family=Open+Sans:wght@300;400;500;700;800&display=swap");
+
+html {
+  font-family: "Open Sans", sans-serif;
+}
+
 .section-headers {
   font-weight: 800 !important;
   font-size: 28px;
