--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -56,6 +56,21 @@
   line-height: 23px;
 
   color: #ffffff;
+  z-index: 2;
+}
+
+.footer-btn-wrapper {
+  position: relative;
+}
+
+.horizontal-line {
+  position: absolute;
+  left: -540px;
+  top: 32px;
+  width: 1200px;
+  border: 1px solid #ffffff;
+  opacity: 0.2;
+  z-index: 1;
 }
 
 .footer-btn-wrapper:before,
@@ -148,6 +163,48 @@
   .footer-btn-wrapper:after {
     content: "";
     width: 300px;
+    height: 1px;
+    margin: 0 10px;
+    vertical-align: super;
+    background: #ffffff;
+    opacity: 0.2;
+    display: inline-block;
+  }
+}
+
+@media (min-width: 990px) and (max-width: 1200px) {
+  .footer-btn-wrapper:before,
+  .footer-btn-wrapper:after {
+    content: "";
+    width: 500px;
+    height: 1px;
+    margin: 0 10px;
+    vertical-align: super;
+    background: #ffffff;
+    opacity: 0.2;
+    display: inline-block;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1600px) {
+  .footer-btn-wrapper:before,
+  .footer-btn-wrapper:after {
+    content: "";
+    width: 550px;
+    height: 1px;
+    margin: 0 10px;
+    vertical-align: super;
+    background: #ffffff;
+    opacity: 0.2;
+    display: inline-block;
+  }
+}
+
+@media (min-width: 1600px) and (max-width: 1900px) {
+  .footer-btn-wrapper:before,
+  .footer-btn-wrapper:after {
+    content: "";
+    width: 700px;
     height: 1px;
     margin: 0 10px;
     vertical-align: super;
