--- a/src/components/mainSection/mainSection.css
+++ b/src/components/mainSection/mainSection.css
@@ -14,12 +14,13 @@
   padding-bottom: 4em;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
 }
 
 .hero-left-content {
   width: 100%;
+  margin-top: 3em;
 }
 
 .hero-right-content {
@@ -132,7 +133,7 @@
     padding-bottom: 4em;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
     z-index: 2;
   }
@@ -144,6 +145,8 @@
     margin-top: 25px;
     margin-bottom: 5px;
     color: #213053;
+    color: #213053;
+    opacity: 0.8;
   }
 
   .hero-left-content {
@@ -211,7 +214,7 @@
     padding-bottom: 4em;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
     z-index: 2;
   }
@@ -319,7 +322,7 @@
     font-style: normal;
     font-weight: 800;
     font-size: 4rem;
-    line-height: 110px;
+    line-height: 90px;
 
     letter-spacing: -1px;
 
@@ -344,18 +347,19 @@
     padding-bottom: 4em;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
     z-index: 2;
   }
 
   .paragraphMainSection {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 1.2rem;
     line-height: 30px;
     margin-top: 25px;
     margin-bottom: 5px;
     color: #213053;
+    opacity: 0.8;
   }
 
   .hero-left-content {
