--- a/src/components/portFolio/portFolio.css
+++ b/src/components/portFolio/portFolio.css
@@ -1,8 +1,16 @@
-.portfolio-container {
+/* .portfolio-container {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+} */
+
+.portfolio-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-row-gap: 2rem;
+  align-items: center;
+  justify-items: center;
 }
 
 .portfolio-menu {
@@ -194,10 +202,10 @@
 
 @media (min-width: 768px) {
   .portfolio-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-column-gap: 1rem;
+    grid-row-gap: 2rem;
   }
 
   .portfolio-menu {
@@ -399,57 +407,191 @@
     object-fit: cover;
     border-radius: 50%;
   }
+  .portfolio-menu-container {
+    display: none;
+  }
 }
 
-@media (min-width: 767px) and (max-width: 960px) {
-  .portfolio {
-    width: 320px;
-  }
+.portfolio-menu-container {
+  display: none;
+}
 
+@media (min-width: 768px) and (max-width: 960px) {
   .portfolio-container {
-    flex-wrap: wrap;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-column-gap: 1rem;
+    grid-row-gap: 2rem;
     align-items: center;
-    justify-content: space-between;
+    justify-items: center;
   }
 
+  .portfolio {
+    width: 220px;
+    height: auto;
+    margin: 0px 0px;
+  }
   .portfolio-img {
-    width: 100%;
-    padding: 40px 10px;
-    padding-left: 15px;
+    padding: 30px;
     padding-bottom: 0px;
-    display: flex;
+    width: 220px;
+    height: 220px;
+    background: #a0dcff;
+    vertical-align: middle;
+  }
+
+  .portfolio-grey {
+    background: #c0dae5;
   }
 
   .portfolio-green {
     padding-right: 0;
+    background: #c1e5c0;
   }
 
   .portfolio-img img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .portfolio-menu-container {
+    display: none;
   }
 }
 
-/* @media (min-width: 960px) and (max-width: 1200px) {
+@media (min-width: 960px) and (max-width: 1200px) {
+  .portfolio-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-column-gap: 1rem;
+    grid-row-gap: 2rem;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .portfolio {
+    width: 250px;
+    height: auto;
+    margin: 0px 0px;
+  }
+  .portfolio-img {
+    padding: 30px;
+    padding-bottom: 0px;
+    width: 250px;
+    height: 250px;
+    background: #a0dcff;
+    vertical-align: middle;
+  }
+
+  .portfolio-grey {
+    background: #c0dae5;
+  }
+
+  .portfolio-green {
+    padding-right: 0;
+    background: #c1e5c0;
+  }
+
+  .portfolio-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .portfolio-menu-container {
+    display: none;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1600px) {
+  .portfolio-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-column-gap: 10px;
+    grid-row-gap: 2rem;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .portfolio {
+    width: 350px;
+    height: auto;
+    margin: 0px 0px;
+  }
+  .portfolio-img {
+    padding: 30px;
+    padding-bottom: 0px;
+    width: 350px;
+    height: 350px;
+    background: #a0dcff;
+    vertical-align: middle;
+  }
+
+  .portfolio-grey {
+    background: #c0dae5;
+  }
+
+  .portfolio-green {
+    padding-right: 0;
+    background: #c1e5c0;
+  }
+
+  .portfolio-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .portfolio-menu-container {
+    display: none;
+  }
+}
+
+@media (min-width: 1600px) and (max-width: 1900px) {
+  .portfolio-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-column-gap: 10px;
+    grid-row-gap: 2rem;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .portfolio {
+    width: 350px;
+    height: auto;
+    margin: 0px 0px;
+  }
+  .portfolio-img {
+    padding: 30px;
+    padding-bottom: 0px;
+    width: 350px;
+    height: 350px;
+    background: #a0dcff;
+    vertical-align: middle;
+  }
+
+  .portfolio-grey {
+    background: #c0dae5;
+  }
+
+  .portfolio-green {
+    padding-right: 0;
+    background: #c1e5c0;
+  }
+
+  .portfolio-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+/* @media (min-width: 1700px) {
+  .portfolio-menu-container {
+    display: block;
+  }
 } */
 
-@media (min-width: 991px) and (max-width: 1263px) {
-  .portfolio {
-    width: 340px;
-  }
-
-  .portfolio-img {
-    width: 100%;
-    padding: 25px 15px;
-    padding-bottom: 0;
-  }
-
-  .portfolio-green {
-    padding-right: 0;
-  }
-
-  .portfolio-img img {
-    width: 100%;
-    object-fit: cover;
+@media (min-width: 1920px) {
+  .portfolio-menu-container {
+    display: block;
   }
 }
