--- a/src/components/testimonialSlider/testimonialSlider.css
+++ b/src/components/testimonialSlider/testimonialSlider.css
@@ -18,7 +18,7 @@
 }
 
 .slider-container {
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -38,7 +38,7 @@
 .slide-userImg img {
   width: 100%;
   height: auto;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .slide-userInfo-testimony {
@@ -132,7 +132,6 @@
   align-items: center;
   display: flex;
   width: 100%;
-  height: 200px;
   margin-top: 5em;
 }
 
@@ -186,6 +185,11 @@
   .slide-userImg img {
     width: 100%;
     object-fit: cover;
+  }
+
+  .slider-container {
+    width: 70%;
+    margin: 0 auto;
   }
 }
 
