--- a/src/components/mainSection/mainSection.css
+++ b/src/components/mainSection/mainSection.css
@@ -3,7 +3,6 @@
   padding-bottom: 10px;
   width: 100%;
   position: relative;
-  overflow: hidden;
   background-repeat: none;
   background-size: cover;
 }
@@ -203,7 +202,7 @@
     padding-bottom: 10px;
     width: 100%;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
     background-repeat: none;
     background-size: cover;
   }
@@ -243,7 +242,7 @@
     left: -25px;
     color: #213053;
     opacity: 0.15;
-    bottom: -30px;
+    bottom: -25px;
   }
 
   .buttonMainSection {
